--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,29 @@ authors = ["Ivan Soloducha <ivan@soloduha.com>"]
 autobins = false
 
 [dependencies]
-actix-web = "0.6"
-actix = ">=0.5"
-diesel = { version = "1.0.0", features = ["postgres"] }
+actix-web = { version = "0.6", optional = true }
+actix = { version = ">=0.5", optional = true }
+diesel = { version = "1.0.0", optional = true, features = ["postgres"] }
 dotenv = "0.9.0"
-yew = { git = "https://github.com/DenisKolodin/yew" }
+yew = { git = "https://github.com/DenisKolodin/yew", optional = true }
+stdweb = { version = "0.4.7", optional = true }
 
 [[bin]]
 name = "app"
 path = "src/frontend/main.rs"
+required-features = ["frontend"]
 
 [[bin]]
 name = "backend"
 path = "src/main.rs"
+
+[features]
+default = [
+    "actix",
+    "actix-web",
+    "diesel",
+]
+frontend = [
+    "stdweb",
+    "yew"
+]
